--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,9 @@ button:hover {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  background-size: cover;
+  background-position: center;
+  height: 300px; 
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
   z-index: 1;
 }
