--- a/styles.css
+++ b/styles.css
@@ -43,28 +43,28 @@ button:hover {
   background-image: url('images/trolley.jpg');
 }
 .bribe-bg {
-  background-image: url('images/trolley.jpg');
+  background-image: url('images/brine.jpg');
   }
 .auton-bg {
-  background-image: url('images/trolley.jpg');
+  background-image: url('images/auton.jpg');
   }
 .environment-bg {
-  background-image: url('images/trolley.jpg');
+  background-image: url('images/environment.jpg');
   }
 .plane-bg {
-  background-image: url('images/trolley.jpg');
+  background-image: url('images/whistleblow.jpg');
   }
 .ai-bg {
-  background-image: url('images/trolley.jpg');
+  background-image: url('images/ai.jpg');
   }
 .data-bg {
-  background-image: url('images/trolley.jpg');
+  background-image: url('images/data privacy.jpg');
   }
 .social_media-bg {
-  background-image: url('images/trolley.jpg');
+  background-image: url('images/social media.jpg');
   }
 .climate_change-bg {
-  background-image: url('images/trolley.jpg');
+  background-image: url('images/climate change.jpg');
   }
 /*I didn't use this, but just in case*/
 .text-box {
